<resources>
    <string name="app_name" translatable="false">Diabetips</string>
    <string name="api_base_url" translatable="false">https://api.dev.diabetips.fr/v1</string>
    <string name="client_id" translatable="false">diabetips-android</string>
    <string name="client_secret" translatable="false">DayeeW6efeeTiequuphaereiShaephoi</string>
    <string name="scope" translatable="false">biometrics:read biometrics:write chat connections:read connections:write meals:read meals:write notes:read notes:write notifications predictions:new profile:read profile:write recipe:read recipe:write user:delete</string>
    <string name="content_json" translatable="false">application/json; charset=utf-8</string>
    <string name="content_urlencoded" translatable="false">application/x-www-form-urlencoded; charset=utf-8"</string>
    <string name="pagination_header" translatable="false">X-Pages</string>
    <string name="param_mode" translatable="false">Mode</string>
    <string name="param_entry" translatable="false">Entry</string>
    <string name="param_meal" translatable="false">Meal</string>
    <string name="param_recipe" translatable="false">Recipe</string>
    <string name="param_food" translatable="false">Food</string>
    <string name="param_notification" translatable="false">Notification</string>
    <string name="placeholder_text" translatable="false">Placeholder Text</string>
    <string name="placeholder_date" translatable="false">XX/XX/XXXX</string>
    <string name="placeholder_hour" translatable="false">XX:XX</string>
    <string name="placeholder_number" translatable="false">X</string>
    <string name="format_hour_12" translatable="false">h:mm a</string>
    <string name="format_hour_24" translatable="false">HH:mm</string>
    <string name="format_time_api" translatable="false">yyyy-MM-dd\'T\'HH:mm:ss.SSSZZ</string>
    <string name="format_time_api_UTC" translatable="false">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="format_date_api" translatable="false">yyyy-MM-dd</string>
    <string name="format_date_birth">MMMM d yyyy</string>
    <string name="format_date">EEE, MMM d yyyy</string>
    <string name="format_date_dashboard">MM/dd/yyyy</string>
    <string name="format_date_simple_12">MM/dd/yyyy - h:mm a</string>
    <string name="format_date_simple_24">MM/dd/yyyy - HH:mm</string>
    <string name="unit">Unit(s)</string>
    <string name="unit_unit">unit</string>
    <string name="unit_units">units</string>
    <string name="unit_minute">minutes</string>
    <string name="unit_portions">portions</string>
    <string name="unit_g" translatable="false">g</string>
    <string name="unit_u" translatable="false">u</string>
    <string name="unit_calorie" translatable="false">kcal</string>
    <string name="unit_glucose" translatable="false">mg/dl</string>
    <string name="change_picture">Change picture</string>
    <string name="save_change">Save ?</string>
    <string name="unsaved_change">Some changes haven\'t been saved, do you want to save them ?</string>
    <string name="saved_change">Saved</string>
    <string name="change_comment">Edit comment</string>
    <string name="change_insulin">Edit insulin injection</string>
    <string name="add_hba1c">Add HbA1c value</string>
    <string name="change_hba1c">Edit HbA1c value</string>
    <string name="add_activity">Add physical activity</string>
    <string name="change_activity">Edit physical activity</string>
    <string name="activity_type">Activity type</string>
    <string name="select_quantity">Select quantity</string>
    <string name="select_quantity_input">Quantity</string>
    <string name="select_duration_input">Duration</string>
    <string name="select_intensity_input">Intensity</string>
    <string name="select_percentage_input">Percentage (%)</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="mail_input">Email</string>
    <string name="password_input">Password</string>
    <string name="password_confirm_input">Confirm Password</string>
    <string name="name_input">Name</string>
    <string name="first_name_input">First name</string>
    <string name="login_button">Connection</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="back_to_login_button">Back to login page</string>
    <string name="forgot_password_button">Forgot Password</string>
    <string name="reset_password_button">Reset password</string>
    <string name="reset_password">An email with a new password has been sent</string>
    <string name="created_account">An email has been sent to validate your account</string>
    <string name="glycemie">Blood glucose</string>
    <string name="ready_to_scan">Ready to scan</string>
    <string name="no_nfc">This device doesn\'t support NFC</string>
    <string name="nfc_disable">NFC is disabled</string>
    <string name="sensor_not_ready">The sensor isn\'t ready yet</string>
    <string name="home_title">Home</string>
    <string name="last_prediction">• Last prediction</string>
    <string name="last_use">• Last use</string>
    <string name="open_dashboard_button">Open Dashboard</string>
    <string name="chat_title">Diabetologist discussion</string>
    <string name="chat_input">Type your message</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="event_notebook_title">Event notebook</string>
    <string name="average">Average</string>
    <string name="glucose_average_title">Average glucose level</string>
    <string name="glucose_curve_title">Blood glucose curve</string>
    <string name="hba1c_title">Glycated hemoglobin</string>
    <string name="meal">Meal</string>
    <string name="insulin_slow">Slow insulin</string>
    <string name="insulin_fast">Fast insulin</string>
    <string name="comment_delete">Are you sure you want to delete this comment?</string>
    <string name="insulin_delete">Are you sure you want to delete this injection?</string>
    <string name="hba1c_delete">Are you sure you want to delete this HbA1c value?</string>
    <string name="activity_delete">Are you sure you want to delete this physical activity?</string>
    <string name="comment">Comment</string>
    <string name="activity">Physical activity</string>
    <string name="sugar">Sugar</string>
    <string name="add_value">Add a value</string>
    <string name="time_range_input">Time range</string>
    <string name="no_data">No data to display</string>
    <string name="no_data_24">No data to display for the last 24 hours</string>
    <string name="no_data_period">No data to display for the selected period</string>
    <string name="insulin_quantity_title">Average Insulins Quantities</string>
    <string name="blood_sugar_level_ranges_title">Blood sugar level ranges</string>
    <string name="target_hyper"><![CDATA[Hyperglycemia > 140 md/dl]]></string>
    <string name="target_hypo"><![CDATA[Hypoglycemia < 80 md/dl]]></string>
    <string name="target_in">In ranges</string>
    <string name="profile_title">Profile</string>
    <string name="new_password_input">New Password</string>
    <string name="weight_input">Weight (kg)</string>
    <string name="height_input">Height (cm)</string>
    <string name="age_input">Age (year)</string>
    <string name="birth_input">Date of birth</string>
    <string name="sex_input">Sex</string>
    <string name="diabetes_type_input">Diabetes type</string>
    <string name="hyperglycemia">Hyperglycemia limit</string>
    <string name="hypoglycemia">Hypoglycemia limit</string>
    <string name="medical_information">Medical information</string>
    <string name="new_password_button">Change Password</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="new_picture">Take a new picture</string>
    <string name="picture_gallery">Open gallery</string>
    <string name="update_profile_picture">Profile picture updated</string>
    <string name="remove_profile_picture">Profile picture removed</string>
    <string name="update">Update</string>
    <string name="update_profile">Profile updated</string>
    <string name="change_theme">Change theme</string>
    <string name="logout">Logged out</string>
    <string name="logout_button">Logout</string>
    <string name="logout_confirm">Do you want to logout ?</string>
    <string name="deactivated">Account deactivated with success</string>
    <string name="deactivate">Deactivate account</string>
    <string name="deactivate_account_confirm">Are you sure you want to deactivate your account?</string>
    <string name="settings_title">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="lang">en</string>
    <string name="test_notification">Send test notification</string>
    <string name="test_notification_send">Notification sent</string>
    <string name="entry_title">New entry</string>
    <string name="add_entry">Add a new entry</string>
    <string name="total_sugar">Total carbohydrate</string>
    <string name="summary">Summary</string>
    <string name="calculate_insulin">Predict my insulin</string>
    <string name="calculate">Predict</string>
    <string name="insulin_fast_input">Fast insulin</string>
    <string name="insulin_slow_input">Slow insulin</string>
    <string name="comment_input">Comment</string>
    <string name="physical_activity_input">Duration of physical activity</string>
    <string name="meal_title">My meal</string>
    <string name="recipe_title">My recipe</string>
    <string name="meal_recipe_subtitle">Recipes</string>
    <string name="recipe_food_subtitle">Foods</string>
    <string name="meal_nutrition_text">Nutritional summary of your meal</string>
    <string name="meal_delete">Are you sure you want to delete this meal?</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_portion">Portions</string>
    <string name="recipe_nutrition_portion">Quantity to analyse (in portions)</string>
    <string name="recipe_favorite_add">Recipe added to favorites</string>
    <string name="recipe_favorite_remove">Recipe removed from favorites</string>
    <string name="recipe_all">All recipes</string>
    <string name="recipe_favorite">Favorites</string>
    <string name="recipe_personal">My recipes</string>
    <string name="view_meal">My meals</string>
    <string name="view_recipe">Recipes</string>
    <string name="add_meal">Add a new meal</string>
    <string name="add_other_meal">Add another meal</string>
    <string name="add_recipe">Add a recipe</string>
    <string name="add_food">Add some food</string>
    <string name="search_food">Search food</string>
    <string name="new_recipe">New recipe</string>
    <string name="search_recipe">Search a recipe</string>
    <string name="recipe_not_found">Sorry, but we don\'t know this recipe yet.</string>
    <string name="food_not_found">Sorry, but no food with that name has been found.</string>
    <string name="validate">Validate</string>
    <string name="description">Description</string>
    <string name="sugar_100g">"Carbohydrate for 100g: "</string>
    <string name="nutritional_values">Nutritional values</string>
    <string name="nutritional_calorie">Calories</string>
    <string name="nutritional_carbohydrate">Carbohydrates</string>
    <string name="nutritional_sugar">Sugars</string>
    <string name="nutritional_fat">Fat</string>
    <string name="nutritional_saturated_fat">Saturated fat</string>
    <string name="nutritional_fiber">Dietary Fibers</string>
    <string name="nutritional_protein">Proteins</string>
    <string name="nutritional_score">Nutri-Score</string>
    <string name="toggle_content">Content</string>
    <string name="toggle_nutrition">Nutrition</string>
    <string name="generate_fake_data" translatable="false">Generate data</string>
    <string name="delete_data" translatable="false">Delete data</string>
    <string name="generate" translatable="false">Generate data</string>
</resources>