<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigationHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home_title" />

    <item
        android:id="@+id/navigationDashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard_title" />

    <item
        android:id="@+id/navigationRecipes"
        android:icon="@drawable/ic_bell"
        android:title="@string/view_recipe" />

    <item
        android:id="@+id/navigationProfile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile_title" />

    <!--item
        android:id="@+id/navigationSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title" /-->
</menu>