<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:theme="@style/BackgroundTheme">

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/mail_input"
            android:inputType="textEmailAddress"
            android:theme="@style/TextInputTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_input"
            android:inputType="textPersonName"
            android:theme="@style/TextInputTheme"
            app:layout_constraintBottom_toTopOf="@+id/emailInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_input"
            android:inputType="textPersonName"
            android:theme="@style/TextInputTheme"
            app:layout_constraintBottom_toTopOf="@+id/emailInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            android:theme="@style/TextInputTheme"
            app:layout_constraintBottom_toTopOf="@+id/passwordConfirmInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConfirmInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm_input"
            android:inputType="textPassword"
            android:theme="@style/TextInputTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <ru.dimorinny.floatingtextbutton.FloatingTextButton
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/FloatingTextButtonTheme"
            app:floating_left_icon="@drawable/ic_person"
            app:floating_title="@string/sign_up_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInput" />

</androidx.constraintlayout.widget.ConstraintLayout>