<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DataGenerator"
    style="@style/BackgroundHomeTheme">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/generateButton"
        style="@style/MaterialButtonTheme"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:text="@string/generate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteButton"
        style="@style/MaterialButtonTheme"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/half_margin_size"
        android:text="@string/delete_data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateButton"/>

    <TextView
        android:id="@+id/date_picker_from"
        style="@style/TextAltTheme"
        android:layout_width="wrap_content"
        android:layout_marginEnd="@dimen/margin_size"
        android:layout_marginStart="@dimen/half_margin_size"
        android:text="@string/placeholder_text"
        android:layout_marginTop="@dimen/half_margin_size"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>