<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ClearBackgroundTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InsulinQuantityActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/averageInsulinActionBar"
        style="@style/ActionBarTheme"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/closeInsulinQuantityButton"
            style="@style/ImageButtonTransparentTheme"
            android:layout_marginStart="@dimen/half_margin_size"
            android:contentDescription="@string/placeholder_text"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleInsulinQuantityText"
            style="@style/SubtitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin_size"
            android:text="@string/insulin_quantity_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/closeInsulinQuantityButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/insulinQuantityTimeInputLayout"
        style="@style/DropdownInputNoHintLayoutTheme"
        android:layout_marginTop="@dimen/half_margin_size"
        android:layout_width="match_parent"
        android:hint="@string/time_range_input"
        android:labelFor="@id/insulinQuantityTimeDropdown"
        app:layout_constraintTop_toBottomOf="@id/averageInsulinActionBar">

        <AutoCompleteTextView
            android:id="@+id/insulinQuantityTimeDropdown"
            style="@style/DropdownTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/insulinQuantityChartUnit"
        style="@style/HintAltTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_unit"
        android:elevation="@dimen/shadow_size"
        app:layout_constraintEnd_toEndOf="@id/averageBarChart"
        app:layout_constraintTop_toTopOf="@id/averageBarChart"/>

    <com.epitech.diabetips.utils.DetailBarChart
        android:id="@+id/averageBarChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_size"
        android:layout_marginEnd="@dimen/margin_size"
        android:layout_marginBottom="@dimen/half_margin_size"
        app:layout_constraintTop_toBottomOf="@id/insulinQuantityTimeInputLayout"
        app:layout_constraintBottom_toTopOf="@id/insulinQuantityText" />

    <TextView
        android:id="@+id/insulinQuantityText"
        style="@style/TextBoldTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_margin_size"
        android:text="@string/average"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>