<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/half_margin_size"
    style="@style/ClearBackgroundTheme">

    <TextView
        android:id="@+id/forgotPasswordText"
        style="@style/TitleTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_margin_size"
        android:layout_marginTop="@dimen/half_margin_size"
        android:text="@string/forgot_password_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailResetPasswordInputLayout"
        style="@style/TextInputLayoutTheme"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/quarter_margin_size"
        android:hint="@string/mail_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailResetPasswordInput"
            style="@style/TextInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetPasswordButton"
        style="@style/MaterialButtonTheme"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/quarter_margin_size"
        android:text="@string/reset_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailResetPasswordInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>